This commit is the version with the Test with Junit